--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="slylesheet"href="somefont.css">
     <script>/* Yandex Metrica */ </script>
     <script> /* Google Analytics */ </script>
+    <script> /* Metrica */ </script>
 </head>
 <body>
   <a href="paymant.html"></a>
